# open_retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_pipeline.py
.github/workflows/: distribute-package.yaml  tests.yaml
data/: Test.csv
output/: results_huggingface_chroma.csv
src/open_rag/: document_loaders.py
src/open_rag/utils/: config.py  rephrasor.py
src/openrag/: document_loaders.py  embedding_providers.py  retrievers.py  text_splitters.py  vector_databases.py
src/openrag/utils/: classifier.py  config.py  llms.py
tests/: test_document_loaders.py  test_embedding_providers.py  test_retrievers.py  test_text_splitters.py  test_vector_databases.py
tests/index/test/: chroma.sqlite3
tests/index/test_faiss/: index.faiss  index.pkl
tests/index/test_huggingface/: chroma.sqlite3
tests/test_data/: attention.docx  latestblock.json
