[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_retrieval"
version = "0.0.1"
description = "A retrieval package build on top of Open source models"
readme = "README.md"
authors = [{ name = "Koleshjr", email = "koleshjr@gmail.com" }]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

keywords = ["document loaders","embedding providers", "text splitters","vector databases","retrivers"]    

dependencies = [
 "langchain-community>=0.2.1",
 "qdrant-client>=1.9.1",
 "rerankers[transformers]>=0.3.0",
 "sentence-transformers>=2.7.0",
 "unstructured>=0.14.2",
 "python-docx>=1.1.2",
 "chromadb>=0.5.0",
 "langchain>=0.2.1",
 "Markdown>=3.6",
 "beautifulsoup4>=4.12.3",
 "langchain-experimental>=0.0.59",
 "nltk>=3.8.1",
 "fastembed>=0.2.7",
 "pymilvus>=2.4.1",
 "docarray>=0.40.0",
 "faiss-cpu>=1.8.0",
 "unstructured[pdf]>=0.14.2"

]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/koleshjr/open_retrieval"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/open_retrieval/__init__.py" = ["{version}"]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
